1999-02-01  Tomas Ogren  <stric@ing.umu.se>

	* sv.po: Updated

1999-01-26  Kjartan Maraas  <kmaraas@fib.hl.no>

	* no.po: Updated.
	
1999-01-13  Tomas Ogren  <stric@ing.umu.se>

	* sv.po: Updated.

1999-01-10  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

1998-11-24  Tuomas Lukka <lukka@iki.fi>

	* fi.po added

1998-10-14  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

1998-09-22  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed references to gstripchart, as it is not
	being distributed.  Ditto for mini-utils/gsu.

1998-09-21  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed references to edit-menus files.

1998-09-11  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

1998-09-08  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed getdate.c (again!), as it is generated from
	getdate.y.

1998-09-04  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

	* POTFILES.in: Added ghex/hex-document.c.

1998-09-03  Sung-Hyun Nam <namsh@lgic.co.kr>

	* POTFILES.in: Removed references to gtop files, since gtop has
	its own po files.

1998-08-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed references to gedit files, since they are
	no longer there.

1998-08-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* POTFILES.in: Removed `gncal/getdate.c'. This file is generated
	from `gncal/getdate.y'.

1998-08-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Sanitized for gnomecal.

1998-08-19  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

1998-08-17  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed a little bunch of missing files from POTFILES.in.

1998-08-16  Martin Baulig  <martin@home-of-linux.org>

	* de.po: Updated German translation.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* POTFILES.in: Removed `gdiskfree/error.c'.
