@@ -1,10 +1,15 @@
 gcalc/gcalc.c
 gdiskfree/df.c
 ghex/config.c
+ghex/converter.c
+ghex/findreplace.c
+ghex/ghex.h
 ghex/hex-document.c
 ghex/main.c
+ghex/preferences.c
 ghex/ui.c
 gsearchtool/gsearchtool.c
+gstripchart/gstripchart.c
 gtt/app.c
 gtt/clist.c
 gtt/log.c
