@@ -1,3 +1,8 @@
+1999-02-06  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
+
+	* POTFILES.in: Added ghex/{converter.c,findreplace.c,ghex.h,
+	preferences.c}, gstripchart/gstripchart.c.
+
 1999-02-01  Tomas Ogren  <stric@ing.umu.se>
 
 	* sv.po: Updated
